--- a/static/languages/en.json
+++ b/static/languages/en.json
@@ -1,14 +1,14 @@
 {
-  "heading": "Education spending up across all EU countries",
-  "subheading": "General government expenditure on military defense as a percentage of GDP in countries of the European Union in 2020",
+  "heading": "What is the share of households suffering under energy poverty?",
+  "subheading": "In 2023 on average 10.6% of total households in member states of the EU27 were suffering under energy poverty.",
   "legend1": "No data available",
-  "tooltip1": "of GDP",
+  "tooltip1": "of households",
   "textSourceDescription": "Source",
   "textSource": "Eurostat",
   "textNoteDescription": "Note",
-  "textNote": "Government expenditure by COFOG (UNSD classification of functions of government, replicated in ESA2010) function and type.",
+  "textNote": "The overall rate of total households suffering under energy poverty is calculated for all income levels and types of households.",
   "textDataAccess": "Access the data",
-  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
+  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/ilc_mdes01/default/table?lang=en",
   "textCountryClick": "Click for more info",
   "extraInfoText_BE": "With the need for unanimity causing a bureaucratic bottleneck in many areas, there is a certain logic to moving towards qualified majority voting where possible. In practice, a qualified majority is when 15 of the 27 member states votes in favour of something, as long as together they represent more than 65 per cent of the EU’s 450 million citizens.",
   "extraInfoLink_BE": "Read more",
