--- a/static/languages/sl.json
+++ b/static/languages/sl.json
@@ -1,14 +1,14 @@
 {
-  "heading": "Poraba za izobraževanje se je povečala v vseh državah EU",
-  "subheading": "Javnofinančni izdatki za vojaško obrambo v odstotkih BDP v državah Evropske unije v letu 2020",
+  "heading": "Kolikšen je delež gospodinjstev, ki trpijo zaradi energetske revščine?",
+  "subheading": "Leta 2023 je povprečno 10,6 % vseh gospodinjstev v državah članicah EU27 trpelo zaradi energetske revščine.",
   "legend1": "Ni podatkov",
-  "tooltip1": "BDP",
+  "tooltip1": "gospodinjstev",
   "textSourceDescription": "Vir",
   "textSource": "Eurostat",
   "textNoteDescription": "Opomba",
-  "textNote": "Državni izdatki po funkciji in vrsti COFOG (UNSD klasifikacija funkcij vlade, ponovljena v ESA2010).",
-  "textDataAccess": "Dostop do podatkov",
-  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
+  "textNote": "Skupna stopnja skupnih gospodinjstev, ki trpijo zaradi energetske revščine, se izračuna za vse dohodkovne ravni in vrste gospodinjstev.",
+  "textDataAccess": "Dostopajte do podatkov",
+  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/ilc_mdes01/default/table?lang=en",
   "textCountryClick": "Kliknite za več informacij",
   "extraInfoText_BE": "Glede na to, da potreba po soglasju na številnih področjih povzroča birokratsko ozko grlo, obstaja določena logika za prehod na glasovanje s kvalificirano večino, kjer je to mogoče. V praksi je kvalificirana večina takrat, ko 15 od 27 držav članic glasuje za nekaj, če skupaj predstavljajo več kot 65 odstotkov od 450 milijonov državljanov EU.",
   "extraInfoLink_BE": "Preberi več",
@@ -16,7 +16,7 @@
   "extraInfoLink_DE": "Preberi več",
   "extraInfoText_ES": "",
   "extraInfoLink_ES": "",
-  "extraInfoText_FR": "V tem kontekstu je bolgarska vlada ustanovila novo enoto za spremljanje medijev. Nova enota je zasnovana tako, da spremlja vse oblike medijev glede usmerjenih dezinformacij, vendar – za razliko od državnega neodvisnega Sveta za elektronske medije – nima pristojnosti za urejanje ali sankcioniranje. In tudi ne bi smela, poudarja Božanov v intervjuju za Bolgarski nacionalni radio.",
+  "extraInfoText_FR": "V tem kontekstu je bolgarska vlada ustanovila novo enoto za spremljanje medijev. Nova enota je zasnovana tako, da spremlja vse oblike medijev glede usmerjenih dezinformacij, vendar – za razliko od državnega neodvisnega sveta za elektronske medije – nima pristojnosti za urejanje ali sankcioniranje. In tudi ne bi smela, poudarja Božanov v intervjuju za Bolgarski nacionalni radio.",
   "extraInfoLink_FR": "",
   "extraInfoText_IT": "Gašper Dovžan, državni sekretar na slovenskem zunanjem ministrstvu in član odbora konference, pravi, da se Slovenija zagotovo ne izogiba pogumnim odločitvam in ne zavrača možnosti premika k kvalificirani večini. Meni pa, da je še vedno prostor za konsenzno odločanje.",
   "extraInfoLink_IT": "Več informacij",
@@ -24,8 +24,8 @@
   "extraInfoLink_LU": "Preberi več",
   "extraInfoText_PL": "Liutauras Gudzinskas, profesor politologije na univerzi v Vilniusu, pravi Žinių Radijasu, da čeprav bi bil predlog Evropske komisije za krepitev pluralizma in neodvisnosti medijev ter njihovo zaščito pred političnimi ali poslovnimi vmešavanjem lahko koristno preventivno orodje v mnogih državah, je verjetno za Madžarsko prepozno.",
   "extraInfoLink_PL": "Več informacij",
-  "extraInfoText_RO": "Čeprav je 3. maja svetovni dan svobode tiska, Litva praznuje svobodo tiska vsako leto 7. maja – ker ta datum označuje konec carske prepovedi izdajanja in distribucije knjig v litovščini.",
-  "extraInfoLink_RO": "Preveri to",
+  "extraInfoText_RO": "Čeprav je 3. maja svetovni dan svobode tiska, Litva praznuje svobodo tiska vsako leto 7. maja – ker ta datum pomeni konec carske prepovedi izdajanja in distribucije knjig v litovščini.",
+  "extraInfoLink_RO": "Preverite to",
   "extraInfoText_SE": "",
   "extraInfoLink_SE": ""
 }
