--- a/static/languages/lv.json
+++ b/static/languages/lv.json
@@ -6,26 +6,8 @@
   "textSourceDescription": "Avots",
   "textSource": "Eurostat",
   "textNoteDescription": "Piezīme",
-  "textNote": "Kopējais enerģētiskajā nabadzībā dzīvojošo mājsaimniecību īpatsvars tiek aprēķināts visiem ienākumu līmeņiem un mājsaimniecību veidiem.",
+  "textNote": "Enerģijas nabadzība rodas, ja mājsaimniecībai jāsamazina enerģijas patēriņš tādā mērā, kas negatīvi ietekmē iedzīvotāju veselību un labklājību",
   "textDataAccess": "Piekļūstiet datiem",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/ilc_mdes01/default/table?lang=en",
-  "textCountryClick": "Noklikšķiniet, lai iegūtu vairāk informācijas",
-  "extraInfoText_BE": "Tā kā vajadzība pēc vienprātības daudzās jomās rada birokrātiskus šķēršļus, pastāv zināma loģika, lai pēc iespējas pārietu uz kvalificētu balsu vairākumu. Praksē kvalificēts vairākums ir tad, kad 15 no 27 dalībvalstīm balso par kaut ko, ja vien tās kopā pārstāv vairāk nekā 65 procentus no 450 miljoniem ES pilsoņu.",
-  "extraInfoLink_BE": "Lasīt vairāk",
-  "extraInfoText_DE": "Iespējams, tā nav nejaušība, ka tikai divas dienas vēlāk Eiropas Komisija paziņoja, ka beidzot iedarbinās nosacītības mehānismu, kas saista ES fondu maksājumus ar tiesiskuma ievērošanu. Budapešta tiek kritizēta par mediju brīvības ierobežojumiem, interešu konfliktiem un korupciju.",
-  "extraInfoLink_DE": "Lasīt vairāk",
-  "extraInfoText_ES": "",
-  "extraInfoLink_ES": "",
-  "extraInfoText_FR": "Šajā kontekstā Bulgārijas valdība ir izveidojusi jaunu plašsaziņas līdzekļu uzraudzības vienību. Jaunā vienība ir izstrādāta, lai uzraudzītu visu veidu plašsaziņas līdzekļus mērķtiecīgai dezinformācijai, taču atšķirībā no valsts neatkarīgās Elektronisko plašsaziņas līdzekļu padomes tai nav tiesību regulēt vai sodīt. Un arī nevajadzētu, Bulgārijas Nacionālā radio intervijā uzsver Božanovs.",
-  "extraInfoLink_FR": "",
-  "extraInfoText_IT": "Slovēnijas Ārlietu ministrijas valsts sekretārs un konferences komitejas loceklis Gašpers Dovžans saka, ka Slovēnija noteikti nevairās no drosmīgiem lēmumiem vai noraida iespēju virzīties uz kvalificētu vairākumu. Tomēr viņš uzskata, ka vēl ir vieta vienprātīgai lēmumu pieņemšanai.",
-  "extraInfoLink_IT": "Vairāk informācijas",
-  "extraInfoText_LU": "Tomēr Luksemburgas EP deputāts Marks Anhels ir pārliecināts, ka līguma izmaiņas ir absolūti nepieciešamas – ne tikai lai padarītu lēmumu pieņemšanas procedūras mazāk apgrūtinošas, bet arī lai paplašinātu ES kompetences sfēru. Viņš intervijā Luksemburgas nacionālajai raidorganizācijai 100,7 apgalvo, ka ES pilsoņi to skaidri prasīja konferences procesa laikā.",
-  "extraInfoLink_LU": "Lasīt vairāk",
-  "extraInfoText_PL": "Viļņas Universitātes politikas zinātnes profesors Liutaurs Gudzinskas portālam Žinių Radijas stāsta, ka, lai gan Eiropas Komisijas priekšlikums stiprināt plašsaziņas līdzekļu plurālismu un neatkarību un aizsargāt tos no politiskas vai biznesa iejaukšanās varētu būt noderīgs preventīvs instruments daudzās valstīs, visticamāk Ungārijai par vēlu.",
-  "extraInfoLink_PL": "Vairāk informācijas",
-  "extraInfoText_RO": "Lai gan 3. maijā tiek atzīmēta Pasaules preses brīvības diena, Lietuva preses brīvību katru gadu atzīmē 7. maijā, jo ar šo datumu beidzas cara laika aizliegums izdot un izplatīt grāmatas lietuviešu valodā.",
-  "extraInfoLink_RO": "Pārbaudiet šo",
-  "extraInfoText_SE": "",
-  "extraInfoLink_SE": ""
+  "textCountryClick": "Noklikšķiniet, lai iegūtu vairāk informācijas"
 }
