Updated text in all language json files

--- a/static/languages/bg.json
+++ b/static/languages/bg.json
@@ -1,6 +1,6 @@
 {
-  "heading": "Какъв е делът на домакинствата, страдащи от енергийна бедност?",
-  "subheading": "През 2023 г. средно 10,6% от всички домакинства в страните-членки на ЕС27 са страдали от енергийна бедност.",
+  "heading": "Колко европейски домакинства са изправени пред енергийна бедност?",
+  "subheading": "Средно 10,6% от домакинствата в ЕС не са били в състояние да задоволят енергийните си нужди през 2023 г.",
   "legend1": "Няма налични данни",
   "tooltip1": "на домакинствата",
   "textSourceDescription": "Източник",
