--- a/static/languages/cs.json
+++ b/static/languages/cs.json
@@ -1,6 +1,6 @@
 {
-  "heading": "Jaký je podíl domácností trpících energetickou chudobou?",
-  "subheading": "V roce 2023 trpělo energetickou chudobou v průměru 10,6 % z celkového počtu domácností v členských státech EU27.",
+  "heading": "Kolik evropských domácností čelí energetické chudobě?",
+  "subheading": "V průměru 10,6 % domácností v EU nebylo v roce 2023 schopno pokrýt své energetické potřeby.",
   "legend1": "Nejsou k dispozici žádné údaje",
   "tooltip1": "domácností",
   "textSourceDescription": "Zdroj",
