--- a/static/languages/de.json
+++ b/static/languages/de.json
@@ -1,6 +1,6 @@
 {
-  "heading": "Wie hoch ist der Anteil der Haushalte, die unter Energiearmut leiden?",
-  "subheading": "Im Jahr 2023 litten in den Mitgliedsstaaten der EU27 durchschnittlich 10,6 % aller Haushalte unter Energiearmut.",
+  "heading": "Wie viele europäische Haushalte sind von Energiearmut betroffen?",
+  "subheading": "Im Durchschnitt konnten im Jahr 2023 10,6 % der Haushalte in der EU ihren Energiebedarf nicht decken.",
   "legend1": "Keine Daten verfügbar",
   "tooltip1": "der Haushalte",
   "textSourceDescription": "Quelle",
