--- a/static/languages/el.json
+++ b/static/languages/el.json
@@ -1,6 +1,6 @@
 {
-  "heading": "Ποιο είναι το ποσοστό των νοικοκυριών που υποφέρουν από την ενεργειακή φτώχεια;",
-  "subheading": "Το 2023, κατά μέσο όρο, το 10,6% των συνολικών νοικοκυριών στα κράτη μέλη της ΕΕ των 27 υπέφεραν από ενεργειακή φτώχεια.",
+  "heading": "Πόσα ευρωπαϊκά νοικοκυριά αντιμετωπίζουν ενεργειακή φτώχεια;",
+  "subheading": "Κατά μέσο όρο, το 10,6% των νοικοκυριών στην ΕΕ δεν μπόρεσαν να καλύψουν τις ενεργειακές τους ανάγκες το 2023.",
   "legend1": "Δεν υπάρχουν διαθέσιμα δεδομένα",
   "tooltip1": "των νοικοκυριών",
   "textSourceDescription": "Πηγή",
