--- a/static/languages/es.json
+++ b/static/languages/es.json
@@ -1,6 +1,6 @@
 {
-  "heading": "¿Cuál es el porcentaje de hogares que sufren pobreza energética?",
-  "subheading": "En 2023, una media del 10,6% del total de hogares de los Estados miembros de la UE27 sufrían pobreza energética.",
+  "heading": "¿Cuántos hogares europeos se enfrentan a la pobreza energética?",
+  "subheading": "De media, el 10,6% de los hogares de la UE no pudieron satisfacer sus necesidades energéticas en 2023.",
   "legend1": "No hay datos disponibles",
   "tooltip1": "de hogares",
   "textSourceDescription": "Fuente",
