--- a/static/languages/et.json
+++ b/static/languages/et.json
@@ -1,6 +1,6 @@
 {
-  "heading": "Kui suur on kütteostuvõimetuse all kannatavate leibkondade osa?",
-  "subheading": "2023. aastal kannatas EL 27 liikmesriikide leibkondadest keskmiselt 10,6% kütteostuvõimetuse all.",
+  "heading": "Kui paljud Euroopa leibkonnad on silmitsi kütteostuvõimetusega?",
+  "subheading": "Keskmiselt 10,6% ELi leibkondadest ei suutnud 2023. aastal oma energiavajadust katta.",
   "legend1": "Andmed puuduvad",
   "tooltip1": "leibkondadest",
   "textSourceDescription": "Allikas",
