--- a/static/languages/fi.json
+++ b/static/languages/fi.json
@@ -1,6 +1,6 @@
 {
-  "heading": "Mikä on energiaköyhyydestä kärsivien kotitalouksien osuus?",
-  "subheading": "Vuonna 2023 keskimäärin 10,6 prosenttia kaikista kotitalouksista EU27:n jäsenmaissa kärsi energiaköyhyydestä.",
+  "heading": "Kuinka moni eurooppalainen kotitalous kohtaa energiaköyhyyttä?",
+  "subheading": "Keskimäärin 10,6 prosenttia EU:n kotitalouksista ei pystynyt tyydyttämään energiantarpeensa vuonna 2023.",
   "legend1": "Tietoja ei ole saatavilla",
   "tooltip1": "kotitalouksista",
   "textSourceDescription": "Lähde",
