--- a/static/languages/fr.json
+++ b/static/languages/fr.json
@@ -1,6 +1,6 @@
 {
-  "heading": "Quelle est la part des ménages en situation de précarité énergétique ?",
-  "subheading": "En 2023, en moyenne, 10,6 % du total des ménages des États membres de l’UE27 souffraient de précarité énergétique.",
+  "heading": "Combien de ménages européens sont confrontés à la précarité énergétique ?",
+  "subheading": "En moyenne, 10,6 % des ménages de l’UE n’étaient pas en mesure de répondre à leurs besoins énergétiques en 2023.",
   "legend1": "Aucune donnée disponible",
   "tooltip1": "des ménages",
   "textSourceDescription": "Source",
