--- a/static/languages/ga.json
+++ b/static/languages/ga.json
@@ -1,6 +1,6 @@
 {
-  "heading": "Cad é sciar na dteaghlach atá ag fulaingt faoi bhochtaineacht fuinnimh?",
-  "subheading": "In 2023, ar an meán, bhí 10.6% de na teaghlaigh iomlána i mballstáit an AE27 ag fulaingt faoi bhochtaineacht fuinnimh.",
+  "heading": "Cé mhéad teaghlach Eorpach atá ag tabhairt aghaidh ar bhochtaineacht fuinnimh?",
+  "subheading": "Ar an meán, ní raibh 10.6% de theaghlaigh san AE in ann freastal ar a gcuid riachtanas fuinnimh in 2023.",
   "legend1": "Níl aon sonraí ar fáil",
   "tooltip1": "de theaghlaigh",
   "textSourceDescription": "Foinse",
