--- a/static/languages/hr.json
+++ b/static/languages/hr.json
@@ -1,6 +1,6 @@
 {
-  "heading": "Koliki je udio kućanstava koja pate od energetskog siromaštva?",
-  "subheading": "U 2023. godini u prosjeku je 10,6% ukupnih kućanstava u državama članicama EU27 patilo od energetskog siromaštva.",
+  "heading": "Koliko se europskih kućanstava suočava s energetskim siromaštvom?",
+  "subheading": "U prosjeku 10,6% kućanstava u EU nije moglo zadovoljiti svoje energetske potrebe 2023.",
   "legend1": "Nema dostupnih podataka",
   "tooltip1": "kućanstava",
   "textSourceDescription": "Izvor",
