--- a/static/languages/it.json
+++ b/static/languages/it.json
@@ -1,6 +1,6 @@
 {
-  "heading": "Qual è la percentuale di famiglie che soffrono di povertà energetica?",
-  "subheading": "Nel 2023 in media il 10,6% delle famiglie totali negli Stati membri dell'UE27 soffriva di povertà energetica.",
+  "heading": "Quante famiglie europee vivono in povertà energetica?",
+  "subheading": "In media, nel 2023 il 10,6% delle famiglie dell'UE non è stato in grado di soddisfare il proprio fabbisogno energetico.",
   "legend1": "Nessun dato disponibile",
   "tooltip1": "delle famiglie",
   "textSourceDescription": "Fonte",
