--- a/static/languages/lt.json
+++ b/static/languages/lt.json
@@ -1,6 +1,6 @@
 {
-  "heading": "Kokia namų ūkių dalis kenčia nuo energijos nepritekliaus?",
-  "subheading": "2023 m. vidutiniškai 10,6 % visų namų ūkių 27 ES valstybėse narėse kentė energetinį nepriteklių.",
+  "heading": "Kiek Europos namų ūkių susiduria su energijos nepritekliumi?",
+  "subheading": "Vidutiniškai 10,6 % namų ūkių ES negalėjo patenkinti savo energijos poreikių 2023 m.",
   "legend1": "Nėra duomenų",
   "tooltip1": "namų ūkių",
   "textSourceDescription": "Šaltinis",
