--- a/static/languages/lv.json
+++ b/static/languages/lv.json
@@ -1,6 +1,6 @@
 {
-  "heading": "Kāda ir to mājsaimniecību daļa, kuras cieš no enerģētiskās nabadzības?",
-  "subheading": "2023. gadā vidēji 10,6% no kopējām mājsaimniecībām ES27 dalībvalstīs cieta no enerģētiskās nabadzības.",
+  "heading": "Cik daudz Eiropas mājsaimniecību saskaras ar enerģētisko nabadzību?",
+  "subheading": "Vidēji 10,6% mājsaimniecību ES 2023. gadā nespēja apmierināt savas enerģijas vajadzības.",
   "legend1": "Nav pieejami dati",
   "tooltip1": "no mājsaimniecībām",
   "textSourceDescription": "Avots",
