--- a/static/languages/mt.json
+++ b/static/languages/mt.json
@@ -1,6 +1,6 @@
 {
-  "heading": "X'inhu s-sehem ta' familji li jbatu taħt il-faqar enerġetiku?",
-  "subheading": "Fl-2023 bħala medja 10.6% tad-djar totali fl-istati membri tal-UE27 kienu qed ibatu taħt il-faqar enerġetiku.",
+  "heading": "Kemm djar Ewropej qed jiffaċċjaw faqar enerġetiku?",
+  "subheading": "Bħala medja, 10.6 % tad-djar fl-UE ma setgħux jissodisfaw il-ħtiġijiet tal-enerġija tagħhom fl-2023.",
   "legend1": "Ebda data disponibbli",
   "tooltip1": "tad-djar",
   "textSourceDescription": "Sors",
