--- a/static/languages/nl.json
+++ b/static/languages/nl.json
@@ -1,6 +1,6 @@
 {
-  "heading": "Hoeveel huishoudens lijden aan energiearmoede?",
-  "subheading": "In 2023 kampte gemiddeld 10,6% van de huishoudens in de lidstaten van de EU27 met energiearmoede.",
+  "heading": "Hoeveel Europese huishoudens kampen met energiearmoede?",
+  "subheading": "Gemiddeld kon 10,6% van de huishoudens in de EU in 2023 niet in hun energiebehoefte voorzien.",
   "legend1": "Geen gegevens beschikbaar",
   "tooltip1": "van huishoudens",
   "textSourceDescription": "Bron",
