--- a/static/languages/pl.json
+++ b/static/languages/pl.json
@@ -1,6 +1,6 @@
 {
-  "heading": "Jaki odsetek gospodarstw domowych cierpi z powodu ubóstwa energetycznego?",
-  "subheading": "W 2023 r. średnio 10,6% gospodarstw domowych w państwach członkowskich UE27 cierpiało z powodu ubóstwa energetycznego.",
+  "heading": "Ile europejskich gospodarstw domowych zmaga się z ubóstwem energetycznym?",
+  "subheading": "Średnio 10,6% gospodarstw domowych w UE nie było w stanie zaspokoić swoich potrzeb energetycznych w 2023 r.",
   "legend1": "Brak dostępnych danych",
   "tooltip1": "gospodarstw domowych",
   "textSourceDescription": "Źródło",
