--- a/static/languages/pt.json
+++ b/static/languages/pt.json
@@ -1,6 +1,6 @@
 {
-  "heading": "Qual é a parcela de famílias que sofrem com a pobreza energética?",
-  "subheading": "Em 2023, em média, 10,6% do total de domicílios nos estados-membros da UE27 sofriam de pobreza energética.",
+  "heading": "Quantas famílias europeias enfrentam pobreza energética?",
+  "subheading": "Em média, 10,6% dos lares na UE não conseguiram satisfazer as suas necessidades energéticas em 2023.",
   "legend1": "Não há dados disponíveis",
   "tooltip1": "de famílias",
   "textSourceDescription": "Fonte",
