--- a/static/languages/ro.json
+++ b/static/languages/ro.json
@@ -1,6 +1,6 @@
 {
-  "heading": "Care este ponderea gospodăriilor care suferă de sărăcia energetică?",
-  "subheading": "În 2023, în medie, 10,6% din totalul gospodăriilor din statele membre ale UE27 sufereau din cauza sărăciei energetice.",
+  "heading": "Câte gospodării europene se confruntă cu sărăcia energetică?",
+  "subheading": "În medie, 10,6% dintre gospodăriile din UE nu și-au putut satisface nevoile de energie în 2023.",
   "legend1": "Nu există date disponibile",
   "tooltip1": "a gospodăriilor",
   "textSourceDescription": "Sursă",
