--- a/static/languages/sk.json
+++ b/static/languages/sk.json
@@ -1,6 +1,6 @@
 {
-  "heading": "Aký je podiel domácností trpiacich energetickou chudobou?",
-  "subheading": "V roku 2023 trpelo energetickou chudobou v priemere 10,6 % z celkového počtu domácností v členských štátoch EÚ27.",
+  "heading": "Koľko európskych domácností čelí energetickej chudobe?",
+  "subheading": "V priemere 10,6 % domácností v EÚ nebolo v roku 2023 schopných pokryť svoje energetické potreby.",
   "legend1": "Nie sú k dispozícii žiadne údaje",
   "tooltip1": "domácností",
   "textSourceDescription": "Zdroj",
