--- a/static/languages/sv.json
+++ b/static/languages/sv.json
@@ -1,6 +1,6 @@
 {
-  "heading": "Hur stor är andelen hushåll som lider under energifattigdom?",
-  "subheading": "År 2023 led i genomsnitt 10,6 % av de totala hushållen i EU27:s medlemsstater under energifattigdom.",
+  "heading": "Hur många europeiska hushåll står inför energifattigdom?",
+  "subheading": "I genomsnitt kunde 10,6 % av hushållen i EU inte tillgodose sina energibehov 2023.",
   "legend1": "Inga data tillgängliga",
   "tooltip1": "av hushållen",
   "textSourceDescription": "Källa",
